update tampilan baru

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-
+        <activity
+            android:name=".profile.ChangePassword"
+            android:exported="false"/>
         <activity
             android:name=".profile.EditProfile"
             android:exported="false" />
