--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,15 @@
         android:theme="@style/Theme.UTS_A22202302996"
         tools:targetApi="31">
         <activity
+            android:name=".activity.PaymentDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.OrderHistoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.OrderDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.CheckoutActivity"
             android:exported="false" />
         <activity
